# cmake-examples

./: CMakeLists.txt  LICENSE  README.md
cmake/: Bin2Inc.cmake  TargetAddBlobs.cmake  TargetGenerateIncludes.cmake
examples/: CMakeLists.txt
examples/embed-binary/: CMakeLists.txt  demo.c
